--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "redirects": [
     {
-      "source": "/discord",
+      "source": "/jestix",
       "destination": "https://discord.gg/y5wyG3QN3v",
       "permanent": true
     },
